# my_super_man

./: Cargo.toml  README.md
src/: game.rs  main.rs
src/config/: colour.rs  comm.rs  comm_utils.rs  config.rs  mod.rs
src/map/: draw.rs  game_window.rs  mod.rs  win_size.rs
src/person/: enemy.rs  mod.rs  super_man.rs
src/weapon/: bullet.rs  explode.rs  gun.rs  mod.rs
