[package]
name = "my_super_man"
version = "0.1.0"
authors = ["guoyuMao <gy_mao@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.107.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
find_folder = "0.3.0"
rand = "0.6.0"

#piston_window = "0.107.0"
#find_folder = "0.3.0"
#piston-ai_behavior = "0.31.0"
#piston2d-sprite = "0.59.0"
#image = "0.23.0"
#piston2d-drag_controller = "0.29.0"
#piston2d-deform_grid = "0.6.0"
#piston2d-graphics="0.36.0"
#gfx = "0.18.1"
#gfx_device_gl = "0.16.2"
#vecmath = "1.0.0"
#camera_controllers = "0.31.0"
#rand = "0.6.0"
#shader_version = "0.6.0"
#chrono = "*"
#time = "*"